--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="s1" src="https://cdn-icons.flaticon.com/png/512/4205/premium/4205099.png?token=exp=1644140850~hmac=3c8339acb348127865a43e58a8f78f21" alt="">
+            <img class="s1" src="https://cdn-icons-png.flaticon.com/128/2282/2282188.png" alt="">
             <h3>Development & Design</h3>
             <p>I have always been curious about the Internet and found websites very interesting.</p>
           </div>
